# ps5-payload-sdk

./: .gitignore  Makefile  README.md  ci.sh  crt1.c  elf_x86_64.x  kernel.c  libSceLibcInternal.c  libkernel.c  libkernel_sys.c  libkernel_web.c  linker.x  payload.h  toolchain.cmake  toolchain.mk  toolchain.sh  trampgen.py
crt/: Makefile  crt.c  env.c  kernel.c  kernel.h  klog.c  mdbg.c  mdbg.h  patch.c  payload.c  payload.h  rtld.c  sprx.c  syscall.c  syscall.h
host/: Makefile  deploy-payload  pkg-config  prospero-clang  prospero-clang++  prospero-cmake  prospero-deploy  prospero-lld  prospero-pkg-config  x86_64-ps5-baremetal-cc  x86_64-ps5-baremetal-cxx  x86_64-ps5-baremetal-ld  x86_64-ps5-baremetal.inc  x86_64-ps5-payload-cc  x86_64-ps5-payload-cxx  x86_64-ps5-payload-ld  x86_64-ps5-payload.inc
include_bsd/: _ctype.h  a.out.h  alias.h  ar.h  archive.h  archive_entry.h  asn1_err.h  assert.h  bitstring.h  bluetooth.h  bsdxml.h  calendar.h  camlib.h  cms_asn1.h  complex.h  cpio.h  crmf_asn1.h  ctype.h  cuse.h  db.h  devctl.h  devinfo.h  devstat.h  digest_asn1.h  dirent.h  dlfcn.h  dlg_config.h  dpv.h  elf-hints.h  elf.h  err.h  execinfo.h  fenv.h  fetch.h  figpar.h  fmtmsg.h  fnmatch.h  fstab.h  fts.h  ftw.h  (+150 more)
include_ps5/: kernel.h  klog.h  mdbg.h  payload.h  sprx.h
samples/hello_cmake/: CMakeLists.txt  build.sh  main.c
sce_stubs/: Makefile  genstub.py  libSceAudioOut.c  libSceHttp2.c  libSceLibcInternal.c  libSceLibcInternal.map  libSceNet.c  libSceRandom.c  libSceRandom.map  libSceSsl.c  libSceSystemService.c  libSceSystemService.map  libSceUserService.c  (+10 more)
(+1240 files in other folders)
